scss fixes: logo, top bar in game, landing page buttons, genres(also dark mode)

--- a/src/styles/views/LogOrRegAndRulesForm.scss
+++ b/src/styles/views/LogOrRegAndRulesForm.scss
@@ -114,8 +114,8 @@
     display: flex;
     justify-content: center;
     margin-top: 1em;
+    margin-bottom: 6px;
     color: white;
-    
   }
   &.game-rules {
     margin-top: 1em;
