--- a/src/styles/views/game/Canvas.scss
+++ b/src/styles/views/game/Canvas.scss
@@ -13,7 +13,6 @@
     transition: opacity 0.5s ease, transform 0.5s ease;
     box-shadow: $dropShadow;
     border: 3px solid #2a2c2e;
-    border-bottom-left-radius: 8px;
   }
   &.canvas {
     height: 603px;
@@ -101,7 +100,6 @@
     transition: opacity 0.5s ease, transform 0.5s ease;
     box-shadow: $dropShadow;
     border: 3px solid #2a2c2e;
-    border-bottom-left-radius: 8px;
   }
   &.canvas {
     height: 603px;
