--- a/src/styles/views/game/Tracker.scss
+++ b/src/styles/views/game/Tracker.scss
@@ -36,13 +36,24 @@
     font-weight: bold; 
     color: black;
   }
+  &.phase {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding-left: 12%;
+    width: 30%;
+    height: 100%;
+    font-size: 16px; 
+    font-weight: bold; 
+    color: black;
+  }
   &.word {
     display: flex;
     align-items: center;
     justify-content: flex-start;
     height: 100%;
-    width: 80%;
-    padding-left: 20%;
+    width: 100%;
+    padding-left: 11%;
     font-size: 16px; 
     font-weight: bold; 
     color: black;
@@ -84,13 +95,24 @@
     font-weight: bold;
     color: white;
   }
+  &.phase {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding-left: 12%;
+    width: 30%;
+    height: 100%;
+    font-size: 16px; 
+    font-weight: bold; 
+    color: white;
+  }
   &.word {
     display: flex;
     align-items: center;
     justify-content: flex-start;
     height: 100%;
-    width: 80%;
-    padding-left: 20%;
+    width: 100%;
+    padding-left: 11%;
     font-size: 16px;
     font-weight: bold;
     color: white;
