--- a/src/styles/views/lobby/Players.scss
+++ b/src/styles/views/lobby/Players.scss
@@ -118,7 +118,7 @@
     width: 100%;
     margin-top: 10px;
     margin-bottom: 10px;
-
+    cursor: pointer;
   }
   &.avatar{
     width: 40px;
